// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component should render span element by default 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

<div>
  <span
    class="c0"
    textalign="initial"
    textcolor="inherit"
  />
</div>
`;

exports[`Text Component should render strong html tag for textWeight ExtraStrong 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 800;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

<div>
  <strong
    class="c0"
    textalign="initial"
    textcolor="inherit"
    textweight="ExtraStrong"
  />
</div>
`;

exports[`Text Component should render strong html tag for textWeight Strong 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

<div>
  <strong
    class="c0"
    textalign="initial"
    textcolor="inherit"
    textweight="Strong"
  />
</div>
`;

exports[`Text Component should render with all the props 1`] = `
.c0 {
  margin: 0;
  color: pink;
  font-size: 1.4rem;
  font-weight: 300;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: block;
  margin: 0.8rem 0;
  text-transform: uppercase;
  text-decoration: line-through;
  display: inline-block;
}

<div>
  <span
    class="c0"
    textalign="initial"
    textcolor="pink"
    textvariant="body2"
    textweight="Light"
  />
</div>
`;
